Salesforce/main/default/objects/PricebookEntry/fields/First_Price__c.field-meta.xml
<CustomField>
    <fullName>First_Price__c</fullName>
    <description>Precio para el primer rango de Kg de producto.</description>
    <label>Primeiro preço</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>