Salesforce/main/default/objects/PricebookEntry/fields/Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el producto tiene un precio fijo</description>
    <label>Preço fixo</label>
    <type>Checkbox</type>
</CustomField>