Salesforce/main/default/objects/PricebookEntry/fields/Fourth_Price__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Price__c</fullName>
    <description>Precio para el cuarto rango de Kg de producto.</description>
    <label>Quarto preço</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>