Salesforce/main/default/objects/PricebookEntry/fields/Max_Kg_Second_Price__c.field-meta.xml
<CustomField>
    <fullName>Max_Kg_Second_Price__c</fullName>
    <description>Cantidad máxima de Kg de producto para el segundo precio (Segundo preço)</description>
    <label>Quant max de Kg ao segundo preço</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>