Salesforce/main/default/objects/PricebookEntry/fields/Max_Kg_Third_Price__c.field-meta.xml
<CustomField>
    <fullName>Max_Kg_Third_Price__c</fullName>
    <description>Cantidad máxima de Kg de producto para el tercer precio (Terceiro preço)</description>
    <label>Quant max de Kg ao terceiro preço</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>