Salesforce/main/default/objects/PricebookEntry/fields/Third_Price__c.field-meta.xml
<CustomField>
    <fullName>Third_Price__c</fullName>
    <description>Precio para el tercer rango de Kg de producto.</description>
    <label>Terceiro preço</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>