Salesforce/main/default/objects/PricebookEntry/validationRules/ValidateFixedPriceSecondRange.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateFixedPriceSecondRange</fullName>
    <active>true</active>
    <description>Valida el segundo rango de precios fijos para un producto. Creado para US #12786</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Max_Kg_First_Price__c)),
 ISBLANK(Second_Price__c)
)</errorConditionFormula>
    <errorDisplayField>Second_Price__c</errorDisplayField>
    <errorMessage>o preço é necessário para a segunda faixa de preço fixo</errorMessage>
</ValidationRule>